--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.3.0",
+    "@types/recharts": "^1.8.20",
     "axios": "^0.21.4",
     "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.1.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
