--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
@@ -12,16 +13,21 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.0",
     "@types/recharts": "^1.8.20",
     "axios": "^0.21.4",
+    "downshift": "^6.1.7",
     "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
+    "react-popper": "^2.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.4",
     "typescript": "^4.1.2",
+    "use-debounce": "^7.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
