--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "downshift": "^6.1.7",
     "mapbox-gl": "^2.4.1",
     "react": "^17.0.2",
+    "react-collapsible": "^2.8.4",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
