--- a/package.json
+++ b/package.json
@@ -3,6 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@craco/craco": "^6.4.3",
+    "@emotion/react": "^11.8.1",
+    "@emotion/styled": "^11.8.1",
+    "@mui/icons-material": "^5.4.4",
+    "@mui/material": "^5.4.4",
     "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
@@ -16,6 +21,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.0",
     "@types/recharts": "^1.8.20",
+    "@types/styled-components": "^5.1.24",
     "axios": "^0.21.4",
     "downshift": "^6.1.7",
     "mapbox-gl": "^2.4.1",
@@ -28,12 +34,13 @@
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
     "recharts": "^2.1.4",
+    "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "use-debounce": "^7.0.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,5 +63,7 @@
       "last 1 safari version"
     ]
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "craco-alias": "^3.0.1"
+  }
 }
