:sparkles: Adjust map, adjust store, and update collapsible section

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "BROWSER=none craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
