--- a/package.json
+++ b/package.json
@@ -70,6 +70,10 @@
     "@typescript-eslint/parser": "^5.23.0",
     "craco-alias": "^3.0.1",
     "eslint": "^8.15.0",
-    "eslint-plugin-react": "^7.29.4"
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.5.0",
+    "prettier": "^2.6.2"
   }
 }
