--- a/package.json
+++ b/package.json
@@ -17,13 +17,14 @@
     "@types/mapbox-gl": "^2.4.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react-dom": "^18.0.4",
     "@types/react-icons": "^3.0.0",
     "@types/react-router-dom": "^5.3.0",
     "@types/recharts": "^1.8.20",
     "@types/styled-components": "^5.1.24",
     "axios": "^0.21.4",
     "downshift": "^6.1.7",
+    "eslint": "^8.15.0",
     "mapbox-gl": "^2.4.1",
     "rc-table": "^7.19.0",
     "react": "^17.0.2",
@@ -43,7 +44,7 @@
     "start": "BROWSER=none craco start",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --color",
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --fix",
-    "build": "react-scripts build",
+    "build": "craco build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -66,10 +67,10 @@
     ]
   },
   "devDependencies": {
+    "@types/react-router": "^5.1.18",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "craco-alias": "^3.0.1",
-    "eslint": "^8.15.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
