--- a/package.json
+++ b/package.json
@@ -34,11 +34,12 @@
     "react-icons": "^4.3.1",
     "react-popper": "^2.2.5",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "4.0.3",
+    "react-scripts": "4.0.1",
     "recharts": "^2.1.4",
     "styled-components": "^5.3.3",
     "typescript": "^4.1.2",
     "use-debounce": "^7.0.0",
+    "victory": "^36.4.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
