--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* leonardodasigomes@gmail.com valdersonpontes@gmail.com eggqsaraiva@gmail.com
+* leonardodasigomes@gmail.com valdersonpontes@gmail.com eggqsaraiva@gmail.com anabeatrizsantospontes@gmail.com
