--- a/package.json
+++ b/package.json
@@ -12,9 +12,8 @@
     "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/user-event": "^14.3.0",
     "@turf/turf": "^6.5.0",
-    "@types/jest": "^26.0.15",
     "@types/mapbox-gl": "^2.4.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -37,6 +36,7 @@
     "react-scripts": "4.0.3",
     "recharts": "^2.1.4",
     "styled-components": "^5.3.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.1.2",
     "use-debounce": "^7.0.0",
     "victory": "^36.4.0",
@@ -69,6 +69,8 @@
     ]
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^27.5.1",
     "@types/react-router": "^5.1.18",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
@@ -77,6 +79,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "jest": "^26.6.0",
     "prettier": "^2.6.2"
   }
 }
