--- a/package.json
+++ b/package.json
@@ -38,9 +38,8 @@
     "@popperjs/core": "^2.10.2",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
+    "@testing-library/user-event": "^14.3.0",
     "@turf/turf": "^6.5.0",
-    "@types/jest": "^26.0.15",
     "@types/mapbox-gl": "^2.4.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
@@ -62,6 +61,7 @@
     "react-router-dom": "^5.3.0",
     "recharts": "^2.1.4",
     "styled-components": "^5.3.3",
+    "ts-jest": "^28.0.7",
     "typescript": "^4.1.2",
     "use-debounce": "^7.0.0",
     "victory": "^36.4.0",
@@ -75,7 +75,6 @@
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^2.1.0",
-    "craco-alias": "^3.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
@@ -83,6 +82,9 @@
     "prettier": "^2.6.2",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
-    "vite-tsconfig-paths": "^3.5.0"
+    "vite-tsconfig-paths": "^3.5.0",
+    "@babel/preset-typescript": "^7.18.6",
+    "@types/jest": "^27.5.1",
+    "jest": "^26.6.0"
   }
 }
