--- a/package.json
+++ b/package.json
@@ -40,14 +40,6 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^14.3.0",
     "@turf/turf": "^6.5.0",
-    "@types/mapbox-gl": "^2.4.2",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^18.0.4",
-    "@types/react-icons": "^3.0.0",
-    "@types/react-router-dom": "^5.3.0",
-    "@types/recharts": "^1.8.20",
-    "@types/styled-components": "^5.1.24",
     "axios": "^0.21.4",
     "downshift": "^6.1.7",
     "eslint": "^8.15.0",
@@ -61,7 +53,6 @@
     "react-router-dom": "^5.3.0",
     "recharts": "^2.1.4",
     "styled-components": "^5.3.3",
-    "ts-jest": "^28.0.7",
     "typescript": "^4.1.2",
     "use-debounce": "^7.0.0",
     "victory": "^36.4.0",
@@ -72,9 +63,13 @@
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.18",
+    "@types/react-router-dom": "^5.3.0",
+    "@types/recharts": "^1.8.20",
+    "@types/styled-components": "^5.1.24",
     "@typescript-eslint/eslint-plugin": "^5.23.0",
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^2.1.0",
+    "babel-jest": "^28.1.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
@@ -85,6 +80,9 @@
     "vite-tsconfig-paths": "^3.5.0",
     "@babel/preset-typescript": "^7.18.6",
     "@types/jest": "^27.5.1",
-    "jest": "^26.6.0"
+    "jest": "^28.1.3",
+    "jest-dom": "^4.0.0",
+    "jest-watch-typeahead": "0.6.5",
+    "ts-jest": "^28.0.7"
   }
 }
