--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "axios": "^0.21.4",
     "downshift": "^6.1.7",
     "eslint": "^8.15.0",
+    "jest-styled-components": "^7.1.0",
     "mapbox-gl": "^2.4.1",
     "rc-table": "^7.19.0",
     "react": "^17.0.2",
