--- a/package.json
+++ b/package.json
@@ -49,7 +49,6 @@
     "babel-plugin-inline-react-svg": "^2.0.1",
     "downshift": "^6.1.7",
     "eslint": "^8.15.0",
-    "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "mapbox-gl": "^2.4.1",
     "rc-table": "^7.19.0",
@@ -82,10 +81,13 @@
     "@typescript-eslint/parser": "^5.23.0",
     "@vitejs/plugin-react": "^2.1.0",
     "babel-jest": "^29.3.1",
+    "coverage": "^0.4.1",
+    "craco-alias": "^3.0.1",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "jest": "^29.3.1",
     "jest-dom": "^4.0.0",
     "jest-transform-stub": "^2.0.0",
     "jest-watch-typeahead": "0.6.5",
