--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^14.3.0",
+    "@testing-library/react-hooks": "^8.0.1",
     "@turf/turf": "^6.5.0",
     "axios": "^0.21.4",
     "downshift": "^6.1.7",
