--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "downshift": "^6.1.7",
     "eslint": "^8.15.0",
     "jest": "^29.3.1",
+    "jest-environment-jsdom": "^29.3.1",
     "mapbox-gl": "^2.4.1",
     "rc-table": "^7.19.0",
     "react": "^18.2.0",
