--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
   "devDependencies": {
     "@babel/core": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
+    "@honkhonk/vite-plugin-svgr": "^1.1.0",
     "@types/jest": "^29.2.3",
+    "@types/mapbox-gl": "^2.7.8",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router": "^5.1.18",
