--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,7 +48,7 @@
     "jsx-a11y/anchor-is-valid": "off",
     "import/no-unresolved": "off",
     "import/extensions": "off",
-    "import/no-extraneous-dependencies": ["off", { "devDependencies": true }],
+    "import/no-extraneous-dependencies": "off",
     "jest/expect-expect": "off",
     "react-hooks/rules-of-hooks": "error",
     "react/function-component-definition": "off",
