--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "lint": "eslint '*/**/*.{js,ts,tsx}' --color",
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --fix",
     "test": "jest --passWithNoTests --no-cache",
-    "watch": "yarn test --watch"
+    "watch": "yarn test --watch",
+    "prepare": "husky install"
   },
   "eslintConfig": {
     "extends": [
@@ -87,11 +88,13 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "eslint-plugin-react-hooks": "^4.5.0",
+    "husky": "^8.0.0",
     "jest": "^29.3.1",
     "jest-dom": "^4.0.0",
     "jest-transform-stub": "^2.0.0",
     "jest-watch-typeahead": "0.6.5",
     "jsdom": "^20.0.2",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.6.2",
     "ts-jest": "^29.0.3",
     "typescript": "^4.6.4",
