--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint:fix": "eslint '*/**/*.{js,ts,tsx}' --fix",
     "lint:style": "stylelint 'src/**/*.{ts,tsx}'",
     "test": "jest --passWithNoTests --no-cache",
+    "test:ci": "yarn test --coverage --noStackTrace --silent --ci --runInBand",
     "watch": "yarn test --watch",
     "prepare": "husky install"
   },
