:passport_control: Update codeowners file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,1 +1,1 @@
-* leonardodasigomes@gmail.com valdersonpontes@gmail.com eggqsaraiva@gmail.com anabeatrizsantospontes@gmail.com
+- leonardodasigomes@gmail.com anabeatrizsantospontes@gmail.com
