gráfico para dados históricos de população

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@turf/turf": "^6.5.0",
     "axios": "^0.21.4",
     "babel-plugin-inline-react-svg": "^2.0.1",
+    "chart.js": "^4.4.0",
     "downshift": "^6.1.7",
     "eslint": "^8.15.0",
     "jest-environment-jsdom": "^29.3.1",
@@ -59,6 +60,7 @@
     "postcss-syntax": "^0.36.2",
     "rc-table": "^7.19.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-collapsible": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.3.1",
