--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,10 +1,12 @@
-FROM node:18-buster
+FROM node:20.11.0-alpine3.19
 
 RUN mkdir /atlas
 WORKDIR /atlas
 
 COPY . /atlas
-ENV NODE_OPTIONS="--max-old-space-size=4096 --openssl-legacy-provider"
+#ENV NODE_OPTIONS="--max-old-space-size=4096 --openssl-legacy-provider"
 ENV GENERATE_SOURCEMAP=false
 
-RUN yarn install
+EXPOSE 3000
+
+RUN npm install --legacy-peer-deps
