--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "type": "commonjs",
   "scripts": {
-    "start": "vite",
+    "dev": "vite",
+    "start": "vite --host",
     "build": "node --max-old-space-size=8192 ./node_modules/.bin/vite build",
     "preview": "vite preview",
     "lint": "eslint '*/**/*.{js,ts,tsx}' --color",
@@ -110,7 +111,7 @@
     "stylelint-config-recommended": "^9.0.0",
     "stylelint-config-standard": "^29.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "stylelint-processor-styled-components": "^1.10.0",
+    "stylelint-processor-styled-components": "^1.0.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.6.4",
     "vite": "^3.1.0",
